# c12test

./: .CMakeLists.txt.un~  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: cmake.yml
CMake/Modules/: FindMeteringSDK.cmake
doc/: 01_intro.md  02_building.md  03_design.md  CMakeLists.txt  doxygen.conf.in  header.tex
src/: .CMakeLists.txt.un~  C12Meter.cpp  C12Meter.h  C12Tables.cpp  C12Tables.h  CMakeLists.txt  CMakeLists.txt~  Setup.cpp  Setup.h  autoreader.cpp  c12test.cpp  reader.cpp
test/: C12TableTest.cpp  CMakeLists.txt
