cmake_minimum_required(VERSION 3.16)
set(EXECUTABLE_NAME "c12test")
add_library(C12Tables C12Tables.cpp)
add_executable(${EXECUTABLE_NAME} autoreader.cpp Setup.cpp)
target_compile_options(${EXECUTABLE_NAME} PRIVATE "-Wall;-Wextra")
target_compile_features(${EXECUTABLE_NAME} PUBLIC cxx_std_17)
target_include_directories(${EXECUTABLE_NAME} PRIVATE ${METERINGSDK_INCLUDE_DIR} ${METERINGSDK_BINARY_DIR})
target_link_libraries(${EXECUTABLE_NAME} MCOM MCORE C12Tables) 
install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
